English Shadowing.md
English Shadowing.md

--- a/.obsidian/appearance.json
+++ b/.obsidian/appearance.json
@@ -1,8 +1,3 @@
 {
-  "cssTheme": "Obsidian Nord",
-  "theme": "moonstone",
-  "translucency": false,
-  "accentColor": "",
-  "baseFontSize": 16,
-  "enabledCssSnippets": []
+  "accentColor": ""
 }
